# tgms

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  server.json
.claude/: settings.local.json
.github/workflows/: ci.yml
benchmarks/frozen-v1/: README.md  collegemsg.eventlog.jsonl  collegemsg.memory.sqlite  suite-collegemsg.json  suite-emaileu.json  suite-synth.json
configs/: matrix-dev-oss-14b.yaml  matrix-dev-oss.yaml  matrix-dev.yaml  tool_manual.yaml
configs/campaign/: abl-e1-14b.yaml  abl-e1-7b.yaml  abl-e2-14b.yaml  dev-guided-ab.yaml  fair-baselines-14b.yaml  scale-14b.yaml  scale-32b.yaml  scale-72b.yaml  scale-7b.yaml  test-b6-collegemsg.yaml  test-b6-emaileu.yaml  test-b6-synth.yaml  test-collegemsg-main.yaml  test-collegemsg-models.yaml  test-emaileu.yaml  test-llama8b.yaml  test-phi4mini.yaml  test-synth.yaml
docs/: DECISIONS.md  RELATED.md  TECHNICAL_REPORT.md  bench_ops.md  demo_trace.html  first_oss_matrix_devrun.md  index.html
paper/: .gitignore  REVIEW_RESPONSE.md  fig_arch.tex  fig_standalone.tex  main.blg  main.tex  references.bib
paper/cidr/: PLAN.md  (+3 more)
scripts/: check_commit_hygiene.py  cidr_metrics.py  itiger_job.slurm  run_campaign.sh  run_oss_matrix.sh  run_webapp.sh  vllm_watchdog.sh
tests/: conftest.py  test_agent.py  test_core.py  test_data_memory.py  test_eval_suite.py  test_metamorphic.py  test_operators_oracle.py  test_replay.py  test_spec_v11.py  test_storage_invariants.py  test_tools.py  test_verifier_dynamic.py  test_webapp.py
tgms/: __init__.py  cli.py  store.py
(+46 files in other folders)
