[project]
name = "tgms"
version = "0.3.0"
description = "Agent-Native Temporal Graph Management System (bi-temporal property graph + verified temporal operator algebra + PEV agent layer)"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Xiaofei Zhang", email = "zxfhkust@gmail.com" }]
dependencies = [
    "duckdb>=1.1",
    "kuzu>=0.7",
    "numpy>=1.26",
    "pyarrow>=17",
    "networkx>=3.3",
    "jsonschema>=4.23",
    "pydantic>=2.8",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
agent = ["litellm>=1.48", "fastmcp>=2.0"]
memory = ["faiss-cpu>=1.8", "sentence-transformers>=3.0"]

[project.scripts]
tgms = "tgms.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.112",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tgms"]

[tool.uv]
python-preference = "managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
